--- a/graphs_reco.tex
+++ b/graphs_reco.tex
@@ -1,8 +1,77 @@
-\documentclass[a4paper, 11pt]{article}
+\documentclass[a4paper, 12pt]{article}
+\usepackage[english]{babel}
+\usepackage{fontspec}
+\defaultfontfeatures{Ligatures=TeX,Numbers=OldStyle}% ,Scale=MatchLowercase} bug in current Biolinum
+\setmainfont{Linux Libertine O}
+\setsansfont{Linux Biolinum O}
+%\usepackage[sc]{mathpazo}
+\linespread{1.2}         % Palatino needs more leading (space between lines)
+\usepackage{fancyhdr}
+\usepackage[head=2cm,top=1cm,left=2cm,right=2cm,includehead]{geometry}
+%\usepackage[top=2cm,bottom=2cm,left=2cm,right=2cm,showframe,includehead]{geometry}
+\usepackage{lastpage}
+\usepackage{graphicx}
 
-\usepackage[utf8]{inputenc}
+\geometry{
+  a4paper,
+  left=20mm,
+  right=20mm,
+  bottom=4cm,
+}
+
+\pagenumbering{gobble}  
+
+\newcommand{\nom}{Dr.~Rapha\"el \textsc{Fournier-S'niehotta}}
+\newcommand{\raph}{
+\nom \\
+\mail\, -- \telephone \\
+CNAM Paris\\
+Laboratoire CÉDRIC, équipe VERTIGO\\
+37-1-40 -- 2, rue Conté 75003 Paris\\
+}
+
+\newcommand{\tiph}{
+Dr. Tiphaine \textsc{Viard} \\
+\mailtiph\, -- \telephone \\
+Riken Institue\\
+Laboratoire CÉDRIC, équipe VERTIGO\\
+37-1-40 -- 2, rue Conté 75003 Paris\\
+}
+
+\newcommand{\telephone}{00 33 1 58 80 86 35}
+
+\newcommand{\mail}{fournier@cnam.fr}
+\newcommand{\mailtiph}{tiphaine.viard@riken.jp}
+\newcommand{\dest}{ 
+    \textsc{\Large Offre de stage \\ 
+    Master 2 -- PFE ingénieur recherche}\\[1ex]
+    {\Huge Systèmes de recommandation \\
+    et graphes dynamiques}
+  }
+
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{.5pt}
+\lhead{\includegraphics[width=6cm]{cnamlogo.png}}% use your logo
+\rhead{\includegraphics[height=2cm]{rikenlogo.png}}
+\lfoot{
+\raph
+}
+%\cfoot{Page \thepage{} of \pageref{LastPage}}
+\cfoot{}
+\rfoot{
+\tiph
+}
 
 \begin{document}
+
+\pagestyle{fancy} 
+
+\addvspace{1cm}
+\begin{center}
+  \dest
+\end{center}
+
+\addvspace{1cm}
 
 Le terme de {\em système de recommandation} regroupe l'ensemble des tâches d'apprentissage automatique ({\em machine learning}) où l'on veut faire correpondre les goûts d'utilisateurs et de produits selon leurs goûts et leurs propriétés. 
 Les méthodes de l'état-de-l'art reposent typiquement sur des méthodes de factorisation de matrices, reconnues pour leur efficacité.
