--- a/tex/graphs_reco.tex
+++ b/tex/graphs_reco.tex
@@ -83,10 +83,10 @@ Les graphes, c'est-à-dire des ensembles de n\oe{}uds reliés entre eux par des 
 On peut recourir à un graphe dirigé, pondéré, dynamique, biparti (ou une combinaison de ces propriétés), selon l'application considérée.
 Une propriété clef de ces graphes est leur interprétabilité, et en fait des objets très répandus aussi bien en informatique qu'en biologie ou en sociologie.
 
-Le but de ce stage est d'explorer l'apport des graphes et des flots de liens pour les systèmes de recommandation sociaux, après que de premiers travaux aient validé cette approche~\cite{}.
+Le but de ce stage est d'explorer l'apport des graphes et des flots de liens pour les systèmes de recommandation sociaux, après que de premiers travaux aient validé cette approche~\cite{viard2018augmenting}.
 Dans un premier temps, il faut définir un ensemble de descripteurs de graphes et de flots de liens adaptés; par exemple, des métriques de similarités telles que l'indice de Jaccard~\footnote{Étant donné deux n\oe{}uds $u$ et $v$ et leur voisinages $N(u)$ et $N(v)$, l'indice de Jaccard mesure la similarité entre les deux voisinages: ${\cal J}(u,v) = \frac{|N(u)\cap N(v)|}{|N(u) \cup N(v)|}$.}, ou encore des métriques de centralité.
 
-Ensuite, nous proposons d'intégrer ces métriques à des algorithmes à l'état de l'art de l'apprentissage automatique: des méthodes classiques, par exemple de {\em gradient boosting}~\cite{} ou des {\em factorization machines}~\cite{}, ainsi que des méthodes plus récentes d'apprentissage profond autour des réseaux de neurones de graphes.
+Ensuite, nous proposons d'intégrer ces métriques à des algorithmes à l'état de l'art de l'apprentissage automatique: des méthodes classiques, par exemple de {\em gradient boosting}~\cite{friedman2001greedy} ou des {\em factorization machines}~\cite{rendle2010factorization}, ainsi que des méthodes plus récentes d'apprentissage profond autour des réseaux de neurones de graphes.
 
 
 \section{Déroulement du stage et gratification}
@@ -100,5 +100,9 @@ Une gratification de stage de 66000 yens (environ 530 euros), ainsi qu'une prise
 \section{Contact}
 
 Vous pouvez envoyer votre demande accompagnée d'un CV aux adresses \texttt{fournier@cnam.fr} et \texttt{tiphaine.viard@riken.jp}.
+
+
+\bibliographystyle{abbrv}
+\bibliography{biblio}
 
 \end{document}
