--- a/tex/graphs_reco.tex
+++ b/tex/graphs_reco.tex
@@ -85,7 +85,6 @@ Les graphes, c'est-à-dire des ensembles de n\oe{}uds reliés entre eux par des 
 On peut recourir à un graphe dirigé, pondéré, dynamique, biparti (ou une combinaison de ces propriétés), selon l'application considérée.
 Une propriété-clef de ces graphes est leur {\em interprétabilité}, et en fait des objets très répandus aussi bien en informatique qu'en biologie ou en sociologie.\\
 
-<<<<<<< HEAD
 Le but de ce stage est d'explorer l'apport des graphes et des flots de liens pour les systèmes de recommandation sociaux, après que de premiers travaux aient validé cette approche~\cite{viard2018augmenting}.
 Dans un premier temps, il faut définir un ensemble de descripteurs de graphes et de flots de liens adaptés; par exemple, des métriques de similarités telles que l'indice de Jaccard~\footnote{Étant donné deux n\oe{}uds $u$ et $v$ et leur voisinages $N(u)$ et $N(v)$, l'indice de Jaccard mesure la similarité entre les deux voisinages: ${\cal J}(u,v) = \frac{|N(u)\cap N(v)|}{|N(u) \cup N(v)|}$.}, ou encore des métriques de centralité.
 
@@ -110,8 +109,8 @@ Machine learning -- Systèmes de recommandation -- Graphes
 
 \vfill
 
-\bibliographystyle{plain}
-\bibliography{biblio}
+\bibliographystyle{abbrv}
+\bibliography{./tex/biblio}
 \vfill
 
 \end{document}
